nginx-new/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: argocd
spec:
  selector:
    app: nginx-pod
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
